# Griffin

./: .env.example  .gitignore  CLAUDE.md  README.md
Griffin-Frontend/: package-lock.json
Griffin-Frontend/app/: globals.css  layout.tsx
Griffin-Frontend/components/: hero.tsx  how-it-works.tsx
Griffin-Frontend/components/audit/: audit-dashboard.tsx  screen-flash.tsx  transaction-panel.tsx
Griffin-Frontend/lib/: types.ts
backend/: .env.example  Dockerfile  pyproject.toml  railway.json
backend/src/: api.py  constants.py  kb.py  orchestrator.py  reporter.py  solana_publisher.py  voice.py
backend/src/attackers/: base.py  boundary_probe.py  context_poisoner.py  instruction_hijacker.py  polyglot.py  social_engineer.py
backend/src/prompts/: instruction_hijacker.txt  social_engineer.txt
docs/: cleanup-inventory.md  screens-spec.md  threat-registry.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: attackers-roster.tsx  footer.tsx  hero.tsx  how-it-works.tsx  nav.tsx  who-built-this.tsx  wireframe-icosahedron.tsx
frontend/components/audit/: attacker-card.tsx  attacker-glyph.tsx  attacker-sweep.tsx  audit-dashboard.tsx  (+9 more)
frontend/lib/: api.ts  types.ts
sdk/: package.json
sdk/src/: index.ts  tx-verifier.ts
shield-sdk/src/: chain-listener.ts  detector.ts  index.ts  tx-verifier.ts
target-bot/: .env.example  Dockerfile  package.json  pnpm-lock.yaml  railway.json
target-bot/src/: agent.ts  index.ts  logger.ts  tools.ts
(+24 files in other folders)
